--- a/composer.json
+++ b/composer.json
@@ -10,10 +10,12 @@
         }
     ],
     "minimum-stability": "dev",
-    "require": {},
+    "require": {
+        "nikic/fast-route": "^2.0@dev"
+    },
     "autoload": {
         "psr-4": {
-            "Work\\Search\\": "src/"
+            "Philip\\Work\\": "src/"
         }
     }
 }
