--- a/config.json
+++ b/config.json
@@ -36,7 +36,8 @@
       "method": "GET"
     }
     },
-  "db": {"server": "127.0.0.1",
+  "db": {
+    "server": "127.0.0.1",
     "dbname": "ws_diplom",
     "user": "Philip",
     "pass": "Philip",
