--- a/config.json
+++ b/config.json
@@ -64,7 +64,17 @@
 		"path": "/logout",
 		"controller": "Philip\\Work\\Controllers\\AccountController::logout",
 		"method": "GET"
-    }
+	},
+	"account User": {
+		"path": "/user-account/{email}",
+		"controller": "Philip\\Work\\Controllers\\AccountController::getAccountById",
+		"method": "GET"
+	},
+	"account user info": {
+		"path": "/user-account/{email}/{id_info}",
+		"controller": "Philip\\Work\\Controllers\\AccountController::getAccountInfoById",
+		"method": "GET"
+	}
 	},
 	"db": {
 		"server": "127.0.0.1",
