Добавление комментариев к постам

--- a/config.json
+++ b/config.json
@@ -69,6 +69,11 @@
 		"path": "/user-account/{email}",
 		"controller": "Philip\\Work\\Controllers\\AccountController::getAccountById",
 		"method": "GET"
+	},
+	"add comment": {
+		"path": "/addComment",
+		"controller": "Philip\\Work\\Controllers\\CommentController::addComment",
+		"method": "POST"
 	}
 	},
 	"db": {
