--- a/config.json
+++ b/config.json
@@ -74,6 +74,11 @@
 		"path": "/addComment",
 		"controller": "Philip\\Work\\Controllers\\CommentController::addComment",
 		"method": "POST"
+	},
+	"delete comment": {
+		"path": "/news/comment/{id}",
+		"controller": "Philip\\Work\\Controllers\\CommentController::deleteComment",
+		"method": "GET"
 	}
 	},
 	"db": {
